--- a/lib/Icon/icon.scss
+++ b/lib/Icon/icon.scss
@@ -1,5 +1,8 @@
 .fui-icon {
-  width: 1.4em;
-  height: 1.4em;
+  width: 1.2em;
+  height: 1.2em;
   display: inline-block;
+  path{
+    fill:currentColor;
+  }
 }
