--- a/example.scss
+++ b/example.scss
@@ -15,6 +15,11 @@ $margin:10px;
 .site-page{
   min-height: 100vh;
 }
+.site-main{
+  .mui-layout{
+
+  }
+}
 .site-header{
 
   box-shadow: 2px 4px 2px rgba(0,0,0,0.1);
